--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "env-cmd next dev",
+    "build": "env-cmd next build",
+    "start": "env-cmd next start",
+    "lint": "env-cmd next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "axios": "^0.26.1",
+    "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "yup": "^0.32.11"
@@ -24,5 +27,10 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.0",
     "tailwindcss": "^3.0.23"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
